fix a typo in template

--- a/website/server/templates/table.html
+++ b/website/server/templates/table.html
@@ -9,7 +9,7 @@
     {% for task in tasks %}
     <tr>
     <td>{{ task.task_id }}</td>
-    <td>{{ task.mail_file }}</td>
+    <td>{{ task.main_file }}</td>
     <td>{{ task.task_type }}</td>
     <td>{{ task.status }}</td>
     <td>{{ task.email }}</td>
